data/all_generated_tests/raw_wast_tests/br_if_StackCorruption_1448.wast
;; 9. **Unreachable `br_if` with Non-zero Value Test**:    - **Description**: Incorporate `br_if` within an "unreachable" block with a non-zero condition value to test if stack unwinding is skipped as expected.    - **Constraint Checked**: Unreachable handling consistency.    - **Relation to Stack Corruption**: Ensures that `br_if` conditionally skips stack manipulation in unreachable sections.

(assert_invalid
  (module
    (func (unreachable (br_if 0 (i32.const 1)))))
  "unreachable"
)